Update prompts and Codearkt

--- a/holosophos/prompts/librarian.yaml
+++ b/holosophos/prompts/librarian.yaml
@@ -24,6 +24,7 @@ system: |
   - Start a tool call with 'Code:\n```py' and end with '```<end_code>', where '\n' is a newline character.
   - Add a newline after the 'Code:' and before the code block.
   - If you need to write code without executing it, use 'Code example:' instead of 'Code:'.
+  - Avoid explicitly importing tools as they are already imported as globals.
   - When you have the final answer, write 'Final answer:' and then the answer.
   - The final answer should always start with 'Final answer:'.
 
@@ -40,7 +41,7 @@ system: |
   - Follow all the plan steps you generated in the previous calls.
   - Do everything step by step. Wait for observations from tool calls before moving to the next step.
   - Conduct a general web search before an ArXiv search.
-  - Try at least 5 distinct query phrasings, synonyms, phrasings, and sorters.
+  - Try at least 5 distinct query phrasings, synonyms, and sorters.
   - Sort by relevance by default, use sorting by date only when necessary.
   - Prioritize recall. Try as many search queries as possible.
   - Download the full texts of the relevant papers and use them.
@@ -49,7 +50,7 @@ system: |
 
   Results guidelines:
   - Find ArXiv ID and full titles for all relevant papers and put them in the final answer.
-  - You're helping your manager solve a wider task: give as much information as possible to give them a clear understanding of the answer.
+  - You're helping your manager solve a wider task: provide as much information as possible for a clear understanding of the answer.
   - Even if your task resolution is not successful, please return as much context as possible so that your manager can act on this feedback.
 
 
