--- a/holosophos/prompts/mle_solver.yaml
+++ b/holosophos/prompts/mle_solver.yaml
@@ -44,13 +44,13 @@ system: |
   - Do not simulate experiments: write and run actual scripts with remote tools.
   - You have all the time in the universe: do not be afraid to launch long jobs.
   - You can train full models since your tools have access to GPU clusters.
-  - You can use mle_kit_llm_proxy_remote to get access to LLMs.
+  - You can use llm_proxy_remote to get access to LLMs.
 
   Engineering guidelines:
   - Follow the steps of the plan you generated in the previous calls.
   - Do everything step by step. Wait for observations from tool calls before moving to the next step.
-  - Use `mle_kit_remote_text_editor` and `mle_kit_remote_bash` to write and execute task-related code.
-  - Use `git` in `mle_kit_remote_bash` if you need to explore some GitHub repo.
+  - Use `remote_text_editor` and `remote_bash` to write and execute task-related code.
+  - Use `git` in `remote_bash` if you need to explore some GitHub repo.
   - Utilize git for version control. Commit your changes from time to time.
   - Write modular code with remote tools.
   - Do one change at a time. Do not try to make changes to multiple files at once.
@@ -58,7 +58,7 @@ system: |
   - If you don't know how to solve a problem, try to search for a solution on the web.
 
 
-  ## Example of using mle_kit_remote_bash and mle_kit_remote_text_editor
+  ## Example of using remote_bash and remote_text_editor
   User message:
   Train a logistic regression on the Iris task. Use load_iris function from sklearn. Report the accuracy.
 
@@ -67,7 +67,7 @@ system: |
 
   Code:
   ```py
-  mle_kit_remote_bash("pip3 install scikit-learn")
+  remote_bash("pip3 install scikit-learn")
   ```<end_code>
 
   Observation:
@@ -78,7 +78,7 @@ system: |
 
   Code:
   ```py
-  mle_kit_remote_text_editor("write", "train.py", file_text="""
+  code = """
   from sklearn.datasets import load_iris
   from sklearn.linear_model import LogisticRegression
   from sklearn.model_selection import train_test_split
@@ -90,7 +90,8 @@ system: |
   model.fit(X_train, y_train)
   accuracy = model.score(X_test, y_test)
   print(f"Accuracy is {accuracy:.2f}")
-  """)
+  """
+  remote_text_editor("write", "train.py", file_text=code)
   ```<end_code>
 
   Observation:
@@ -101,7 +102,7 @@ system: |
 
   Code:
   ```py
-  mle_kit_remote_bash("python3 train.py")
+  remote_bash("python3 train.py")
   ```<end_code>
 
   Observation:
@@ -112,7 +113,7 @@ system: |
 
   Code:
   ```py
-  mle_kit_remote_text_editor("str_replace", "train.py", old_str=":100", new_str=":")
+  remote_text_editor("str_replace", "train.py", old_str=":100", new_str=":")
   ```<end_code>
 
   Observation:
@@ -123,7 +124,7 @@ system: |
   
   Code:
   ```py
-  mle_kit_remote_bash("python3 train.py")
+  remote_bash("python3 train.py")
   ```<end_code>
 
   Observation:
@@ -180,8 +181,8 @@ plan: |
   - Do not simulate experiments: write and run actual scripts with remote tools.
   - You have all the time in the universe: do not be afraid to launch long jobs.
   - You can train full models since your tools have access to GPU clusters.
-  - Use `mle_kit_remote_text_editor` and `mle_kit_remote_bash` to write and execute task-related code
-  - Use `git` in `mle_kit_remote_bash` if you need to explore some GitHub repo
+  - Use `remote_text_editor` and `remote_bash` to write and execute task-related code
+  - Use `git` in `remote_bash` if you need to explore some GitHub repo
   - Write modular code with remote tools, one file at a time
   - Start with testing your scripts on a small sample of data to check their correctness
   - If you don't know how to solve a problem, try to search for a solution in the web
