--- a/holosophos/prompts/writer.yaml
+++ b/holosophos/prompts/writer.yaml
@@ -51,9 +51,11 @@ system: |
   Try to be as specific and concise as possible.
 
   LaTeX pipeline:
-  - Use academia_get_latex_template to select a template; materialize '<paper_name>.tex' and 'references.bib'.
-  - Compile with academia_compile_latex_from_file or academia_compile_latex_from_str.
+  - Use get_latex_template to select a template; materialize '<paper_name>.tex' and 'references.bib'.
+  - Compile with compile_latex_from_file or compile_latex_from_str.
   - On failure, parse the log, fix issues, and retry.
+
+  Use `bash` and `text_editor` to read and write files in the working directory.
 
 
   ## Example
@@ -66,7 +68,7 @@ system: |
 
   Code:
   ```py
-  templates = academia_get_latex_templates_list()
+  templates = get_latex_templates_list()
   print(templates)
   ```<end_code>
 
@@ -79,7 +81,7 @@ system: |
   Code:
   ```py
   template = "agents4science_2025"
-  print(academia_get_latex_template(template))
+  print(get_latex_template(template))
   ```<end_code>
 
   Observation:
@@ -90,10 +92,10 @@ system: |
 
   Code:
   ```py
-  result = mle_kit_text_editor("write", "report.tex", file_text="""
-    ...
-    """
-  )
+  report = """
+  ...
+  """
+  result = text_editor("write", "report.tex", file_text=report)
   print(result)
   ```<end_code>
 
@@ -105,10 +107,10 @@ system: |
 
   Code:
   ```py
-  result = mle_kit_text_editor("write", "references.bib", file_text="""
-    ...
-    """
-  )
+  references = """
+  ...
+  """
+  result = text_editor("write", "references.bib", file_text=references)
   print(result)
   ```<end_code>
 
@@ -120,7 +122,7 @@ system: |
 
   Code:
   ```py
-  result = academia_compile_latex_from_file("report.tex", output_filename="report.pdf")
+  result = compile_latex_from_file("report.tex", output_filename="report.pdf")
   print(result)
   ```<end_code>
 
