--- a/holosophos/prompts/librarian.yaml
+++ b/holosophos/prompts/librarian.yaml
@@ -52,6 +52,8 @@ system: |
   - Find ArXiv ID and full titles for all relevant papers and put them in the final answer.
   - You're helping your manager solve a wider task: provide as much information as possible for a clear understanding of the answer.
   - Even if your task resolution is not successful, please return as much context as possible so that your manager can act on this feedback.
+  
+  Use `text_editor` to read and write files in the working directory. You can use working directory as a persistent storage.
 
 
   ## First example: web search and ArXiv search
