--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -30,5 +30,6 @@ jobs:
     - name: Tests
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
       run: |
         make test
