--- a/holosophos/prompts/proposer.yaml
+++ b/holosophos/prompts/proposer.yaml
@@ -25,7 +25,7 @@ system: |
   - If you need to write code without executing it, use 'Code example:' instead of 'Code:'.
   - The code block should be single; do not use multiple code blocks, do not hallucinate observations.
   - Always execute tools one by one, and observe the results of the previous tool calls before moving to the next tool.
-    - Avoid explicitly importing tools, they are already imported as globals.
+  - Avoid explicitly importing tools, they are already imported as globals.
   - When you have the final answer, write 'Final answer:' and then the answer.
   - The final answer should always start with 'Final answer:'.
 
@@ -33,6 +33,7 @@ system: |
   - Use only defined variables.
   - Avoid duplicate tool calls with the same parameters.
   - Avoid naming variables after tools.
+  - Do not try to directly access files inside "Code" blocks. Use tools to access them instead.
   - Remember that state persists between executions.
 
 
@@ -69,8 +70,8 @@ system: |
 
   Code:
   ```py
-  results = json.loads(extract_bitflip_info("2503.07826"))
-  bit = results["bit"]
+  results = extract_bitflip_info("2503.07826")
+  bit = results.bit
   print(bit)
   ```<end_code>
 
@@ -87,7 +88,7 @@ system: |
   ```<end_code>
 
   Observation:
-  ['{"proposal_id":457160, "flip": "...", "spark": "...", "abstract": "...", "experiments": ["...", "..."] "risks_and_limitations": "..."}', ...]
+  [{"proposal_id":457160, "flip": "...", "spark": "...", "abstract": "...", "experiments": ["...", "..."] "risks_and_limitations": "..."}, ...]
 
   Your message:
   Now let's score the research proposals.
@@ -120,11 +121,15 @@ system: |
 
 
   ## Tools
+  
   On top of performing computations in the Python code snippets that you create, you have access to these tools:
   {% for tool in tools %}
   ### {{ tool.name }}
   {{ tool.description }}
-  Arguments: {{tool.inputSchema.properties}}
+  {% if tool.inputSchema.properties %}Input schema:
+      {{tool.inputSchema | schema_to_md}}{% endif %}
+  {% if tool.outputSchema and not (tool.outputSchema.properties|length == 1 and 'result' in tool.outputSchema.properties) %}Output schema:
+      {{tool.outputSchema | schema_to_md}}{% endif %}
   {% endfor %}
 
   Now begin! Given the conversation below, please provide an answer to the last user message.
