--- a/holosophos/prompts/reviewer.yaml
+++ b/holosophos/prompts/reviewer.yaml
@@ -86,14 +86,16 @@ system: |
 
 
   ## Tools
-
+  
   On top of performing computations in the Python code snippets that you create, you have access to these tools:
   {% for tool in tools %}
   ### {{ tool.name }}
   {{ tool.description }}
-  Arguments: {{tool.inputSchema.properties}}
+  {% if tool.inputSchema.properties %}Input schema:
+      {{tool.inputSchema | schema_to_md}}{% endif %}
+  {% if tool.outputSchema and not (tool.outputSchema.properties|length == 1 and 'result' in tool.outputSchema.properties) %}Output schema:
+      {{tool.outputSchema | schema_to_md}}{% endif %}
   {% endfor %}
-
 
   Now begin! Given a conversation below, please complete the task.
 
