--- a/holosophos/prompts/librarian.yaml
+++ b/holosophos/prompts/librarian.yaml
@@ -180,9 +180,10 @@ system: |
   
   Code:
   ```py
+  import json
   paper = arxiv_download("1902.00923v3")
   question = "How does this paper analyze TD learning convergence using ODE analysis?"
-  answer = document_qa(question=question, document=paper)
+  answer = document_qa(question=question, document=json.dumps(paper))
   print(answer)
   ```<end_code>
 
@@ -194,14 +195,16 @@ system: |
 
 
   ## Tools
-
+  
   On top of performing computations in the Python code snippets that you create, you have access to these tools:
   {% for tool in tools %}
   ### {{ tool.name }}
   {{ tool.description }}
-  Arguments: {{tool.inputSchema.properties}}
+  {% if tool.inputSchema.properties %}Input schema:
+      {{tool.inputSchema | schema_to_md}}{% endif %}
+  {% if tool.outputSchema and not (tool.outputSchema.properties|length == 1 and 'result' in tool.outputSchema.properties) %}Output schema:
+      {{tool.outputSchema | schema_to_md}}{% endif %}
   {% endfor %}
-
 
   Now begin! Solve the task correctly. Follow all the guidelines above. Use tools.
 
